--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "migrate": "^1.6.2",
     "mime-types": "^2.1.18",
     "morgan": "^1.9.0",
+    "newrelic": "^5.9.0",
     "nodemailer": "^4.6.8",
     "oauth-1.0a": "^1.0.1",
     "pm2": "^2.10.4",
@@ -90,11 +91,11 @@
     "winston": "^2.4.2"
   },
   "devDependencies": {
-    "apollo-server-express": "^1.3.6",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
+    "apollo-server-express": "^1.3.6",
     "eslint": "^4.16.0",
     "nodemon": "^1.18.7"
   },
