--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "nodemailer": "^4.6.8",
     "oauth-1.0a": "^1.0.1",
     "pm2": "^2.10.4",
+    "remove-accents": "^0.4.2",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
     "resource-router-middleware": "^0.6.0",
